--- a/QMultiMod/QMultiMod.csproj
+++ b/QMultiMod/QMultiMod.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Patches\AttackLastTarget_Perform_Patch.cs" />
+    <Compile Include="Patches\BaseSpotLight_Start_Patch.cs" />
     <Compile Include="Patches\CoffeeVendingMachine_OnHover_Patch.cs" />
     <Compile Include="Patches\CoffeeVendingMachine_OnMachineUse_Patch.cs" />
     <Compile Include="Patches\CrawlerAttackLastTarget_Perform_Patch.cs" />
@@ -71,6 +72,7 @@
     <Compile Include="Patches\Inventory_Awake_Patch.cs" />
     <Compile Include="Patches\PickupableStorage_OnHandClick_Patch.cs" />
     <Compile Include="Patches\PickupableStorage_OnHandHover_Patch.cs" />
+    <Compile Include="Patches\Player_OnTakeDamage_Patch.cs" />
     <Compile Include="Patches\ReaperMeleeAttack_GetBiteDamage_Patch.cs" />
     <Compile Include="Patches\SeamothStorageContainer_Init_Patch.cs" />
     <Compile Include="Patches\SeaMoth_OnUpgradeModuleChange_Patch.cs" />
