--- a/QMultiMod/QMultiMod.csproj
+++ b/QMultiMod/QMultiMod.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Patches\CoffeeVendingMachine_OnHover_Patch.cs" />
     <Compile Include="Patches\CoffeeVendingMachine_OnMachineUse_Patch.cs" />
     <Compile Include="Patches\CrawlerAttackLastTarget_Perform_Patch.cs" />
+    <Compile Include="Patches\DamageSystem_CalculateDamage_Patch.cs" />
     <Compile Include="Patches\Drillable_Start_Patch.cs" />
     <Compile Include="Patches\ExosuitClawArm_OnHit_Patch.cs" />
     <Compile Include="Patches\ExosuitDrillArm_OnHit_Patch.cs" />
@@ -70,12 +71,20 @@
     <Compile Include="Patches\Gravsphere_ApplyGravitation_Patch.cs" />
     <Compile Include="Patches\Gravsphere_OnTriggerEnter_Patch.cs" />
     <Compile Include="Patches\Inventory_Awake_Patch.cs" />
+    <Compile Include="Patches\MapRoomFunctionality_getMapScale_Patch.cs" />
+    <Compile Include="Patches\MapRoomFunctionality_GetScanRange_Patch.cs" />
+    <Compile Include="Patches\NitrogenLevel_Start_Patch.cs" />
     <Compile Include="Patches\PickupableStorage_OnHandClick_Patch.cs" />
     <Compile Include="Patches\PickupableStorage_OnHandHover_Patch.cs" />
     <Compile Include="Patches\SeamothStorageContainer_Init_Patch.cs" />
     <Compile Include="Patches\SeaMoth_OnUpgradeModuleChange_Patch.cs" />
+    <Compile Include="Patches\SubControl_Start_Patch.cs" />
     <Compile Include="Patches\SubRoot_UpdateThermalReactorCharge_Patch.cs" />
     <Compile Include="Patches\SwimToMeat_Perform_Patch.cs" />
+    <Compile Include="Patches\TechLight_Start_Patch.cs" />
+    <Compile Include="Patches\uGUI_CameraDrone_LateUpdate_Patch.cs" />
+    <Compile Include="Patches\uGUI_ResourceTracker_GatherAll_Patch.cs" />
+    <Compile Include="Patches\uGUI_ResourceTracker_GatherScanned_Patch.cs" />
     <Compile Include="Patches\Vehicle_ApplyPhysicsMove_Patch.cs" />
     <Compile Include="Patches\VendingMaching_OnUse_Patch.cs" />
     <Compile Include="Patches\VFXGrapplingRope_Start_Patch.cs" />
